fixed bug for right nav on mobile

--- a/src/app/side-nav/side-nav.component.scss
+++ b/src/app/side-nav/side-nav.component.scss
@@ -14,6 +14,13 @@
       z-index: 200;
     }
   }
+
+  .right-nav {
+    @include grid.un-laptop-layout {
+      display: none;
+    }
+  }
+
   .sidenav-section-wrapper {
     @include grid.in-laptop-layout {
       position: fixed;
